Fix cart number circle and alignment

--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -55,7 +55,7 @@
   }
 }
 
-@keyframes scale-up {
+@keyframes scale-up-bounce {
   0% {
     transform: scale(1,1);
   }
